GNOME Bugzilla – Bug 780099
Playbin3 RTSP Freeze at First Frame
Last modified: 2017-06-15 18:54:43 UTC
Hi all, I'm workin with rtsp streams, - playbin dont have problem in playing the content but, playbin3 can't reproduce the same rtsp stream, the image is frozen at the first frame. log(debug level = 2) Setting pipeline to PAUSED ... Pipeline is live and does not need PREROLL ... Progress: (open) Opening Stream Progress: (connect) Connecting to rtsp://192.168.10.49:1935/live/cam2 Progress: (open) Retrieving server options Progress: (open) Retrieving media info Progress: (request) SETUP stream 0 Progress: (request) SETUP stream 1 Progress: (open) Opened Stream Setting pipeline to PLAYING ... New clock: GstSystemClock Progress: (request) Sending PLAY request Progress: (request) Sending PLAY request Progress: (request) Sent PLAY request 0:00:00.230221251 18052 03304A50 WARN audio-resampler audio-resampler.c:273:convert_taps_gint16_c: can't find exact taps Redistribute latency... 0:00:02.961886450 18052 03364810 WARN videodecoder gstvideodecoder.c:2767:gst_video_decoder_prepare_finish_frame:<avdec_h264-0> decreasing timestamp (0:00:02.739339176 < 0:00:02.740339176) buffering... 100% The stream is generated with Wowza
Created attachment 353775 [details] [review] urisourcebin: Call do_async_done when source state change returns NO_PREROLL Otherwise for RTSP streams for example, the pipeline will never go to PLAYING as it will be missing an ASYNC_DONE message. All RTSP GstValidate tests are currently failling with RTSP streams: https://ci.gstreamer.net/job/GStreamer-master-validate-decodebin3/1552/testReport/
Attachment 353775 [details] pushed as 7e94d28 - urisourcebin: Call do_async_done when source state change returns NO_PREROLL